# pkgatime

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.c  main.h  slist.c  slist.h
cmake/Modules/: Findalpm.cmake
